syntax="proto3";

package cvInterface;

message RegistrationRequest {
    string Token = 1;
    repeated string Indices = 2;
}

enum ResultClass {
    OK = 0; //Request processed successfuly
    PREREQ = 1; //Request failed due to prereqs
    TIME = 3; //Request failed due to timing constraints
    SPN = 4; //Request failed due to invalid SPN
    INVALID = 5; //Request failed due to invalid index
    ERROR = 6; //Request failed due to Server side error
    SQS = 7; //Request failed due to error sending message to SQS
}

message RegistrationResponse {
    map<string,ResultClass> Results = 1;
}

service CourseValidation {
    rpc ChangeRegistration(RegistrationRequest) returns (RegistrationResponse){}
}